--- a/notebooks/01_captura_de_datos_scrap.ipynb
+++ b/notebooks/01_captura_de_datos_scrap.ipynb
@@ -20,14 +20,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numero de registros devueltos: 80\n",
+      "Numero de registros devueltos: 160\n",
       "\n",
-      " el total duró 36.50 segundos.\n"
+      " el total duró 71.16 segundos.\n"
      ]
     }
    ],
    "source": [
-    "input_data =[['valencia','2024-11-01','2024-11-03'],['valencia','2024-11-08','2024-11-10']]\n",
+    "input_data =[['valencia','2024-11-01','2024-11-03'],\n",
+    "             ['valencia','2024-11-08','2024-11-10'],\n",
+    "             ['barcelona','2024-11-01','2024-11-03'],\n",
+    "             ['barcelona','2024-11-08','2024-11-10']]\n",
     "num_pag = 3\n",
     "\n",
     "df = sc1.main(input_data,num_pag)\n"
@@ -35,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +143,7 @@
        "4  2024-11-01  2024-11-03  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
