--- a/notebooks/02_captura_de_datos_apis.ipynb
+++ b/notebooks/02_captura_de_datos_apis.ipynb
@@ -12,7 +12,7 @@
     "import dotenv # type: ignore\n",
     "dotenv.load_dotenv()\n",
     "sys.path.append(\"../\")\n",
-    "from src import call_apis as cp"
+    "from src import call_apis_vuelos as cp"
    ]
   },
   {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "80"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
