call api hoteles, funciones.

--- a/notebooks/02_captura_de_datos_apis.ipynb
+++ b/notebooks/02_captura_de_datos_apis.ipynb
@@ -70,27 +70,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datos_hoteles = [['MAD','BCN','95565077','95565085','2024-11-01','2024-11-03']]\n",
+    "datos_hoteles = [[2,'2024-11-03','-406131','2024-11-01','Valencia'],\n",
+    "                 [2,'2024-11-10','-406131','2024-11-08','Valencia'],\n",
+    "                 [2,'2024-11-03','-372490','2024-11-01','Barcelona'],\n",
+    "                 [2,'2024-11-10','-372490','2024-11-08','Barcelona']]\n",
     "\n",
     "df_hoteles = ho.main(key,datos_hoteles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20"
+       "80"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,14 +128,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>district</th>\n",
+       "      <th>destination</th>\n",
        "      <th>city</th>\n",
+       "      <th>checkin_date</th>\n",
+       "      <th>checkout_date</th>\n",
+       "      <th>address</th>\n",
        "      <th>accommodation_type_name</th>\n",
        "      <th>distance</th>\n",
        "      <th>checkin</th>\n",
        "      <th>checkout</th>\n",
        "      <th>review_score</th>\n",
-       "      <th>address</th>\n",
        "      <th>price_total</th>\n",
        "      <th>price_night</th>\n",
        "      <th>hotel_name</th>\n",
@@ -142,118 +147,264 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Camins al Grau</td>\n",
        "      <td>Valencia</td>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>2024-11-03</td>\n",
+       "      <td>168 Avinguda del Port</td>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>2.67</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>11:00</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>357.30</td>\n",
+       "      <td>178.650</td>\n",
+       "      <td>Valencia Luxury - Sea Port I</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>2024-11-03</td>\n",
+       "      <td>Bailen 18, 1º</td>\n",
+       "      <td>Hostal o pensión</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>14:00</td>\n",
+       "      <td>11:00</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>154.67</td>\n",
+       "      <td>77.335</td>\n",
+       "      <td>NWT Central Station Valencia</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>2024-11-03</td>\n",
+       "      <td>Escultor Vicente Beltrán Grimal, 2</td>\n",
        "      <td>Hotel</td>\n",
        "      <td>2.56</td>\n",
        "      <td>15:00</td>\n",
        "      <td>12:00</td>\n",
        "      <td>8.4</td>\n",
-       "      <td>Escultor Vicente Beltrán Grimal, 2</td>\n",
        "      <td>367.00</td>\n",
-       "      <td>183.50</td>\n",
+       "      <td>183.500</td>\n",
        "      <td>Eurostars Acteón</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ciutat Vella</td>\n",
-       "      <td>València</td>\n",
-       "      <td>Hotel</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>14:30</td>\n",
-       "      <td>12:00</td>\n",
-       "      <td>8.4</td>\n",
-       "      <td>9 Carrer de Sant Ferran</td>\n",
-       "      <td>810.00</td>\n",
-       "      <td>405.00</td>\n",
-       "      <td>Catalina Suites</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ciutat Vella</td>\n",
-       "      <td>Valencia</td>\n",
-       "      <td>Hotel</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>15:00</td>\n",
-       "      <td>12:00</td>\n",
-       "      <td>8.4</td>\n",
-       "      <td>Barcelonina, 5</td>\n",
-       "      <td>500.00</td>\n",
-       "      <td>250.00</td>\n",
-       "      <td>Catalonia Excelsior</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Benicalap</td>\n",
        "      <td>Valencia</td>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>2024-11-03</td>\n",
+       "      <td>Escritor Rafael Ferreres, 22</td>\n",
        "      <td>Hotel</td>\n",
-       "      <td>3.03</td>\n",
-       "      <td>14:00</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>16:00</td>\n",
        "      <td>12:00</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>Valle De Ayora, 1</td>\n",
-       "      <td>344.74</td>\n",
-       "      <td>172.37</td>\n",
-       "      <td>Ilunion Valencia 4</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>400.00</td>\n",
+       "      <td>200.000</td>\n",
+       "      <td>Holiday Inn Express Ciudad de las Ciencias, an...</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Benicalap</td>\n",
        "      <td>Valencia</td>\n",
+       "      <td>Valencia</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>2024-11-03</td>\n",
+       "      <td>Ricardo Micó, 1</td>\n",
        "      <td>Hotel</td>\n",
-       "      <td>3.05</td>\n",
+       "      <td>1.50</td>\n",
        "      <td>15:00</td>\n",
        "      <td>12:00</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>Valle de Ayora, 3 (Paralela Cortes Valencianas)</td>\n",
-       "      <td>365.00</td>\n",
-       "      <td>182.50</td>\n",
-       "      <td>Eurostars Gran Valencia</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>369.00</td>\n",
+       "      <td>184.500</td>\n",
+       "      <td>NH Valencia Center</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>2024-11-08</td>\n",
+       "      <td>2024-11-10</td>\n",
+       "      <td>Avenida Meridiana, 151</td>\n",
+       "      <td>Hotel</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>315.08</td>\n",
+       "      <td>157.540</td>\n",
+       "      <td>Catalonia Atenas</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>2024-11-08</td>\n",
+       "      <td>2024-11-10</td>\n",
+       "      <td>Ramon Turró, 196-198</td>\n",
+       "      <td>Hotel</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>14:00</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>311.11</td>\n",
+       "      <td>155.555</td>\n",
+       "      <td>Ilunion Barcelona</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>2024-11-08</td>\n",
+       "      <td>2024-11-10</td>\n",
+       "      <td>Carrer de Ramon Turró 169-B</td>\n",
+       "      <td>Hotel</td>\n",
+       "      <td>2.89</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>393.62</td>\n",
+       "      <td>196.810</td>\n",
+       "      <td>Acta Voraport</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>2024-11-08</td>\n",
+       "      <td>2024-11-10</td>\n",
+       "      <td>Joaquin Costa, 40</td>\n",
+       "      <td>Hotel</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>373.00</td>\n",
+       "      <td>186.500</td>\n",
+       "      <td>Acta BCN 40</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>2024-11-08</td>\n",
+       "      <td>2024-11-10</td>\n",
+       "      <td>Diputació, 257</td>\n",
+       "      <td>Hotel</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>337.08</td>\n",
+       "      <td>168.540</td>\n",
+       "      <td>Exe Cristal Palace</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>80 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         district      city accommodation_type_name distance checkin checkout  \\\n",
-       "0  Camins al Grau  Valencia                   Hotel     2.56   15:00    12:00   \n",
-       "1    Ciutat Vella  València                   Hotel     0.34   14:30    12:00   \n",
-       "2    Ciutat Vella  Valencia                   Hotel     0.19   15:00    12:00   \n",
-       "3       Benicalap  Valencia                   Hotel     3.03   14:00    12:00   \n",
-       "4       Benicalap  Valencia                   Hotel     3.05   15:00    12:00   \n",
+       "   destination       city checkin_date checkout_date  \\\n",
+       "0     Valencia   Valencia   2024-11-01    2024-11-03   \n",
+       "1     Valencia   Valencia   2024-11-01    2024-11-03   \n",
+       "2     Valencia   Valencia   2024-11-01    2024-11-03   \n",
+       "3     Valencia   Valencia   2024-11-01    2024-11-03   \n",
+       "4     Valencia   Valencia   2024-11-01    2024-11-03   \n",
+       "..         ...        ...          ...           ...   \n",
+       "75   Barcelona  Barcelona   2024-11-08    2024-11-10   \n",
+       "76   Barcelona  Barcelona   2024-11-08    2024-11-10   \n",
+       "77   Barcelona  Barcelona   2024-11-08    2024-11-10   \n",
+       "78   Barcelona  Barcelona   2024-11-08    2024-11-10   \n",
+       "79   Barcelona  Barcelona   2024-11-08    2024-11-10   \n",
        "\n",
-       "   review_score                                          address  price_total  \\\n",
-       "0           8.4               Escultor Vicente Beltrán Grimal, 2       367.00   \n",
-       "1           8.4                          9 Carrer de Sant Ferran       810.00   \n",
-       "2           8.4                                   Barcelonina, 5       500.00   \n",
-       "3           8.0                                Valle De Ayora, 1       344.74   \n",
-       "4           8.5  Valle de Ayora, 3 (Paralela Cortes Valencianas)       365.00   \n",
+       "                               address accommodation_type_name distance  \\\n",
+       "0                168 Avinguda del Port             Apartamento     2.67   \n",
+       "1                        Bailen 18, 1º        Hostal o pensión     0.39   \n",
+       "2   Escultor Vicente Beltrán Grimal, 2                   Hotel     2.56   \n",
+       "3         Escritor Rafael Ferreres, 22                   Hotel     2.60   \n",
+       "4                      Ricardo Micó, 1                   Hotel     1.50   \n",
+       "..                                 ...                     ...      ...   \n",
+       "75              Avenida Meridiana, 151                   Hotel     3.00   \n",
+       "76                Ramon Turró, 196-198                   Hotel     2.99   \n",
+       "77         Carrer de Ramon Turró 169-B                   Hotel     2.89   \n",
+       "78                   Joaquin Costa, 40                   Hotel     0.61   \n",
+       "79                      Diputació, 257                   Hotel     0.44   \n",
        "\n",
-       "   price_night               hotel_name  class  \n",
-       "0       183.50         Eurostars Acteón    4.0  \n",
-       "1       405.00          Catalina Suites    4.0  \n",
-       "2       250.00      Catalonia Excelsior    4.0  \n",
-       "3       172.37       Ilunion Valencia 4    4.0  \n",
-       "4       182.50  Eurostars Gran Valencia    4.0  "
+       "   checkin checkout  review_score  price_total  price_night  \\\n",
+       "0    15:00    11:00           8.2       357.30      178.650   \n",
+       "1    14:00    11:00           5.9       154.67       77.335   \n",
+       "2    15:00    12:00           8.4       367.00      183.500   \n",
+       "3    16:00    12:00           8.1       400.00      200.000   \n",
+       "4    15:00    12:00           8.2       369.00      184.500   \n",
+       "..     ...      ...           ...          ...          ...   \n",
+       "75   15:00    12:00           8.2       315.08      157.540   \n",
+       "76   14:00    12:00           8.4       311.11      155.555   \n",
+       "77   15:00    12:00           8.7       393.62      196.810   \n",
+       "78   15:00    12:00           8.4       373.00      186.500   \n",
+       "79   15:00    12:00           7.6       337.08      168.540   \n",
+       "\n",
+       "                                           hotel_name  class  \n",
+       "0                        Valencia Luxury - Sea Port I    0.0  \n",
+       "1                        NWT Central Station Valencia    0.0  \n",
+       "2                                    Eurostars Acteón    4.0  \n",
+       "3   Holiday Inn Express Ciudad de las Ciencias, an...    3.0  \n",
+       "4                                  NH Valencia Center    4.0  \n",
+       "..                                                ...    ...  \n",
+       "75                                   Catalonia Atenas    4.0  \n",
+       "76                                  Ilunion Barcelona    4.0  \n",
+       "77                                      Acta Voraport    3.0  \n",
+       "78                                        Acta BCN 40    2.0  \n",
+       "79                                 Exe Cristal Palace    4.0  \n",
+       "\n",
+       "[80 rows x 14 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_hoteles.head()"
+    "df_hoteles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
