ok, obtencion de datos de apis y web.

--- a/notebooks/01_captura_de_datos_scrap.ipynb
+++ b/notebooks/01_captura_de_datos_scrap.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Importamos librerias"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,6 +16,13 @@
     "import sys\n",
     "sys.path.append(\"../\")\n",
     "from src import scrap_actividades as sc1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hacemos la llamada a la funcion que scrapea datos de las actividades y guardamos en dataframe"
    ]
   },
   {
@@ -22,7 +36,7 @@
      "text": [
       "Numero de registros devueltos: 160\n",
       "\n",
-      " el total duró 71.16 segundos.\n"
+      " el total duró 69.41 segundos.\n"
      ]
     }
    ],
@@ -37,8 +51,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comprobamos numero resultados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "160"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Listado dataframe resultados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +191,7 @@
        "4  2024-11-01  2024-11-03  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,8 +201,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Guardamos a CSV"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
