--- a/notebooks/03_EDA.ipynb
+++ b/notebooks/03_EDA.ipynb
@@ -294,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_actividades_clean.to_csv(f\"../data/data_actividades_clean.csv\")"
+    "df_actividades_clean.to_csv(f\"../data/data_actividades_eda.csv\")"
    ]
   },
   {
@@ -649,7 +649,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_hoteles_clean.to_csv(f\"../data/data_hoteles_clean.csv\")"
+    "df_hoteles_clean.to_csv(f\"../data/data_hoteles_eda.csv\")"
    ]
   },
   {
@@ -916,7 +916,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_vuelos_clean.to_csv(f\"../data/data_sky_scrapper_clean.csv\")"
+    "df_vuelos_clean.to_csv(f\"../data/data_sky_scrapper_eda.csv\")"
    ]
   }
  ],
