clean data funciones.

--- a/notebooks/04_clean_data.ipynb
+++ b/notebooks/04_clean_data.ipynb
@@ -13,7 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd # type: ignore"
+    "import pandas as pd # type: ignore\n",
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
+    "from src import soporte as sp"
    ]
   },
   {
@@ -127,9 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_actividades.loc[:, 'titulo'] = df_actividades['titulo'].str.capitalize().str.replace('\"','')\n",
-    "df_actividades.loc[:, 'ciudad'] = df_actividades['ciudad'].str.capitalize()\n",
-    "df_actividades['fecha_ini'] = pd.to_datetime(df_actividades['fecha_ini'])"
+    "df_actividades = sp.clean_actividades(df_actividades)"
    ]
   },
   {
@@ -294,12 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_hoteles.loc[:, 'destination'] = df_hoteles['destination'].str.capitalize()\n",
-    "df_hoteles.loc[:, 'city'] = df_hoteles['city'].str.capitalize()\n",
-    "df_hoteles.loc[:, 'accommodation_type_name'] = df_hoteles['accommodation_type_name'].str.capitalize()\n",
-    "df_hoteles.loc[:, 'hotel_name'] = df_hoteles['hotel_name'].str.capitalize().str.replace('\"','')\n",
-    "df_hoteles['checkin_date'] = pd.to_datetime(df_hoteles['checkin_date'])\n",
-    "df_hoteles['class'] = df_hoteles['class'].astype(int)"
+    "df_hoteles = sp.clean_hoteles(df_hoteles)"
    ]
   },
   {
@@ -461,11 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_vuelos.loc[:, 'origin'] = df_vuelos['origin'].str.capitalize()\n",
-    "df_vuelos.loc[:, 'destination'] = df_vuelos['destination'].str.capitalize()\n",
-    "df_vuelos.loc[:, 'carriers'] = df_vuelos['carriers'].str.capitalize()\n",
-    "df_vuelos['departure_date'] = pd.to_datetime(df_vuelos['departure']).dt.date\n",
-    "df_vuelos['departure'] = pd.to_datetime(df_vuelos['departure']).dt.time"
+    "df_vuelos = sp.clean_vuelos(df_vuelos)"
    ]
   },
   {
